updated the projects

--- a/content/hobbies/reading.mdx
+++ b/content/hobbies/reading.mdx
@@ -1,8 +1,8 @@
 ---
 title: reading
-subtitle: 阅读
+subtitle: read
 slug: reading
-synopsis: escape into the world of books. 逃离现实，进入书中世界。
+synopsis: escape into the world of books.
 coverImageUrl: /hobbies/reading.jpeg
 coverImageAlt: Reading
 ---
@@ -17,69 +17,6 @@ coverImageAlt: Reading
       posterUrl:
         "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1655988385i/40121378.jpg",
       href: "https://www.goodreads.com/book/show/40121378-atomic-habits?from_search=true&from_srp=true&qid=x9fCTrFR9g&rank=1",
-    },
-  ]}
-/>
-
-## non-fiction
-
-<BookGrid
-  books={[
-    {
-      title: "被讨厌的勇气",
-      author: "岸见一郎",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img9.doubanio.com/view/subject/m/public/s34348664.jpg",
-      href: "https://book.douban.com/subject/36150914/",
-    },
-  ]}
-/>
-
-## fiction
-
-<BookGrid
-  books={[
-    {
-      title: "镰仓旋涡咨询所",
-      author: "青山美智子",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img1.doubanio.com/view/subject/s/public/s34278638.jpg",
-      href: "https://book.douban.com/subject/36014224/",
-    },
-    {
-      title: "公园生活",
-      author: "吉田修一",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img3.doubanio.com/view/subject/s/public/s27226813.jpg",
-      href: "https://book.douban.com/subject/25835239/",
-    },
-    {
-      title: "克拉拉与太阳",
-      author: "石黑一雄",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img9.doubanio.com/view/subject/s/public/s33821754.jpg",
-      href: "https://book.douban.com/subject/35315153/",
-    },
-    {
-      title: "岛上书店",
-      author: "加布瑞埃拉·泽文",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img1.doubanio.com/view/subject/s/public/s29810488.jpg",
-      href: "https://book.douban.com/subject/26340138/",
-    },
-    {
-      title: "我不能放下的一切",
-      author: "丁丁张",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img1.doubanio.com/view/subject/s/public/s34375378.jpg",
-      href: "https://book.douban.com/subject/36153728/",
-    },
-    {
-      title: "长安的荔枝",
-      author: "马伯庸",
-      posterUrl:
-        "https://images.weserv.nl/?url=https://img3.doubanio.com/view/subject/s/public/s34327482.jpg",
-      href: "https://book.douban.com/subject/36104107/",
     },
   ]}
 />
