--- a/content/hobbies/photography.mdx
+++ b/content/hobbies/photography.mdx
@@ -1,12 +1,12 @@
 ---
 title: photography
-subtitle: 摄影
+subtitle: photo
 slug: photography
-synopsis: capture beautiful moments in life. 捕捉生活中的美好瞬间。
+synopsis: capture beautiful moments in life.
 coverImageUrl: /hobbies/photography.jpeg
 coverImageAlt: Photography
 ---
 
 <PhotoBentoGrid />
 
-Follow my [Instagram](https://instagram.com/bbfish.photo) to see more photos.
+Follow my [Instagram](https://instagram.com/) to see more photos.
