--- a/content/pages/projects/index.mdx
+++ b/content/pages/projects/index.mdx
@@ -5,41 +5,193 @@ slug: projects
 ogDescription: Here are some of the side projects I've worked on. Feel free to explore and try them out!
 ---
 
-## Portfolio Website
+## [Portfolio Website](https://dhruvsekhawat.com)
 
 This interactive portfolio website showcases my skills in modern web development. Built with Next.js, TypeScript, and Tailwind CSS, it features smooth animations, interactive components, and a responsive design.
 
-<ExternalActionButtonLink
+<ImagePerspectiveLink
   href="https://github.com/dhruvsekhawat/portfolio"
-  target="_blank"
+  src="/profile/me.jpeg"
+  alt="Portfolio website screenshot"
 />
+
+<div className="flex items-center gap-4">
+  <ExternalActionButtonLink
+    href="https://github.com/dhruvsekhawat/portfolio"
+    target="_blank"
+  />
+  
+  <a 
+    href="https://github.com/dhruvsekhawat/portfolio" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-1 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-100 transition-colors"
+  >
+    <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+    </svg>
+    View on GitHub
+  </a>
+</div>
 
 <BadgeGroup tags={["typescript", "nextjs", "tailwindcss", "framer-motion"]} />
 
 ---
 
-## Interactive Craft Section
+## [Adam AI - Executive Assistant](https://github.com/dhruvsekhawat/adam)
 
-A collection of interactive web components and animations that demonstrate various frontend techniques. Each "station" includes live code editors where visitors can experiment with the code.
+Intelligent agent architecture using LangChain and vector embeddings to automate executive workflows. Processes conversational commands to send contextual emails, manage calendars, and handle document signing while maintaining organizational knowledge through semantic search. Eliminates repetitive administrative bottlenecks.
 
-<ExternalActionButtonLink href="/craft" target="_self" />
-
-<BadgeGroup
-  tags={[
-    "typescript",
-    "nextjs",
-    "tailwindcss",
-    "framer-motion",
-    "three.js",
-    "sandpack",
-  ]}
+<ImagePerspectiveLink
+  href="https://github.com/dhruvsekhawat/adam"
+  src="/projects/adam.png"
+  alt="Adam AI Executive Assistant screenshot"
 />
+
+<ExternalActionButtonLink
+  href="https://github.com/dhruvsekhawat/adam"
+  target="_blank"
+/>
+
+<BadgeGroup tags={["typescript", "python", "langchain", "vector-embeddings", "nextjs", "tailwindcss"]} />
 
 ---
 
-## Playground Experiments
+## [Beat My Rate - Loan Officer Marketplace](https://frontend-production-0858.up.railway.app/)
+
+Full-stack bidding platform automating mortgage rate competition between loan officers. Borrowers upload financial documents which undergo automated parsing and data extraction, triggering real-time bidding among pre-qualified officers filtered by loan type and geography. WebSocket implementation enables live bid updates, while machine learning algorithms optimize officer-borrower matching based on historical success rates and specialization areas. Streamlines traditionally manual loan shopping process into efficient marketplace dynamics.
+
+<ImagePerspectiveLink
+  href="https://frontend-production-0858.up.railway.app/"
+  src="/projects/Beat My Rate - Loan Officer Platform.jpeg"
+  alt="Beat My Rate Loan Officer Marketplace screenshot"
+/>
+
+<div className="flex items-center gap-4">
+  <ExternalActionButtonLink
+    href="https://frontend-production-0858.up.railway.app/"
+    target="_blank"
+  />
+  
+  <a 
+    href="https://github.com/dhruvsekhawat/obo" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-1 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-100 transition-colors"
+  >
+    <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+    </svg>
+    View on GitHub
+  </a>
+</div>
+
+<BadgeGroup tags={["django", "redis", "websockets", "tesseract-ocr", "nextjs", "machine-learning"]} />
+
+---
+
+## Eventify.ai - AI Event Planning Platform
+
+Autonomous event planning system using AI voice agents to negotiate with vendors via phone calls. Platform processes event requirements then deploys Python agents with Bland AI to contact restaurants, venues, and decorators for real-time price negotiation. Features automated quote extraction, email scraping, and comparison dashboard built with React, Node.js, Supabase, and Google Gemini for processing vendor responses.
+
+<ImagePerspectiveLink
+  href="https://odyssey-psi-ten.vercel.app/"
+  src="/projects/eventifyAI.png"
+  alt="Eventify.ai AI Event Planning Platform screenshot"
+/>
+
+<div className="flex items-center gap-4">
+  <ExternalActionButtonLink
+    href="https://odyssey-psi-ten.vercel.app/"
+    target="_blank"
+  />
+  
+  <a 
+    href="https://github.com/dhruvsekhawat/eventifyAI" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-1 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-100 transition-colors"
+  >
+    <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+    </svg>
+    View on GitHub
+  </a>
+</div>
+
+<BadgeGroup tags={["react", "nodejs", "python", "bland-ai", "supabase", "google-gemini", "typescript"]} />
+
+---
+
+## Homeyfyi.tech - AI Home Inspection Platform
+
+Computer vision system automating property inspections through image/video analysis to identify structural issues and predict maintenance needs. ML models evaluate foundation integrity, roof condition, and environmental factors, generating comprehensive health scores and 3-6 month risk predictions. Integrates with insurance APIs for premium calculations based on assessed property conditions and location-specific hazards.
+
+<ImagePerspectiveLink
+  href="https://devfolio.co/projects/homeyfyitech-887d"
+  src="/projects/homeyfyi.png"
+  alt="Homeyfyi.tech AI Home Inspection Platform screenshot"
+/>
+
+<div className="flex items-center gap-4">
+  <ExternalActionButtonLink
+    href="https://devfolio.co/projects/homeyfyitech-887d"
+    target="_blank"
+  />
+  
+  <a 
+    href="https://github.com/dhruvsekhawat/homefyi.tech" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-1 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-100 transition-colors"
+  >
+    <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+    </svg>
+    View on GitHub
+  </a>
+</div>
+
+<BadgeGroup tags={["react", "flask", "python", "computer-vision", "machine-learning", "pytorch", "openai-api"]} />
+
+---
+
+## NutriPlan Pro - Mobile Nutrition Planner
+
+Flutter mobile app calculating personalized caloric requirements and macronutrient distributions based on user profiles. Integrates Spoonacular API for nutrition data, Firebase for authentication and data persistence, enabling custom meal planning and shopping list generation. Features social sharing, collaborative shopping lists, and favorite meal saving for comprehensive nutrition management.
+
+<div className="flex items-center gap-4">
+  <ExternalActionButtonLink
+    href="https://github.com/dhruvsekhawat/NutriPlan-Pro"
+    target="_blank"
+  />
+  
+  <a 
+    href="https://github.com/dhruvsekhawat/NutriPlan-Pro" 
+    target="_blank" 
+    rel="noopener noreferrer"
+    className="inline-flex items-center gap-1 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-gray-100 transition-colors"
+  >
+    <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+    </svg>
+    View on GitHub
+  </a>
+</div>
+
+<BadgeGroup tags={["dart", "flutter", "firebase", "spoonacular-api", "mobile-development", "nutrition-api", "cross-platform"]} />
+
+---
+
+## [Playground Experiments](/playground)
 
 Various interactive experiments and demos including a mini piano, theme toggles, ASCII animations, and 3D effects. These showcase my interest in creative coding and web animations.
+
+<ImagePerspectiveLink
+  href="/playground"
+  src="/playground/piano.png"
+  alt="Playground experiments screenshot"
+/>
 
 <ExternalActionButtonLink href="/playground" target="_self" />
 
@@ -54,15 +206,3 @@ Various interactive experiments and demos including a mini piano, theme toggles,
   ]}
 />
 
----
-
-## Open Source Contributions
-
-Active contributor to various open source projects, focusing on web development tools, React components, and developer experience improvements.
-
-<ExternalActionButtonLink
-  href="https://github.com/dhruvsekhawat"
-  target="_blank"
-/>
-
-<BadgeGroup tags={["javascript", "typescript", "react", "open-source"]} />
