updated the paths

--- a/content/pages/experiences/index.mdx
+++ b/content/pages/experiences/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: experiences
+title: Experiences
 subtitle: 经历
-slug: experiences
+slug: Experiences
 showToc: false
-ogDescription: My professional journey and experiences in software engineering and entrepreneurship.
+ogDescription: My professional journey and Experiences in software engineering and entrepreneurship.
 ---
 
-My professional journey spans from **founding startups** to working at **leading companies**. Each experience has taught me valuable lessons about **building products**, **leading teams**, and **solving complex problems**. These experiences have shaped my perspective on technology and business.
+My professional journey spans from **founding startups** to working at **leading companies**. Each experience has taught me valuable lessons about **building products**, **leading teams**, and **solving complex problems**. These Experiences have shaped my perspective on technology and business.
 
 ---
 
