--- a/content/posts/2023-10-22-memory-in-learning.mdx
+++ b/content/posts/2023-10-22-memory-in-learning.mdx
@@ -32,7 +32,7 @@ This **power of knowledge association** applies not only when learning but also 
 
 Imagine learning about a historical event. You could study it from a book at home, or you could immerse yourself in the country, visit local museums, and experience the event on-site. Which approach do you think would be more effective?
 
-We learn best when we **engage all our senses**. This multi-sensory experience, involving sight, sound, smell, taste, and touch, creates a lasting impression, as this is **how our brain naturally processes and retains information**. Moreover, the real-life experiences allow us to utilise the **Episodic Memory** portion, that help us associate specific events in our life with the new knowledge and information. This is why someone immersed in a foreign country often learns the language faster.
+We learn best when we **engage all our senses**. This multi-sensory experience, involving sight, sound, smell, taste, and touch, creates a lasting impression, as this is **how our brain naturally processes and retains information**. Moreover, the real-life Experiences allow us to utilise the **Episodic Memory** portion, that help us associate specific events in our life with the new knowledge and information. This is why someone immersed in a foreign country often learns the language faster.
 
 Consider the process of teaching a child the word "Apple." Rather than resorting to rote memorisation through repetitive spelling, why not offer the child a real apple? By engaging their senses—feeling the smooth surface, inhaling the distinct scent, and tasting the sweet flavour—the child forms a rich sensory association with the word "Apple." This multi-sensory experience creates a lasting impression in their memory. When information transforms from static text to a **dynamic, tangible experience**, it is more likely to be retained in long-term memory.
 
@@ -40,4 +40,4 @@ Furthermore, with the AI technology nowadays, it is even more effortless to crea
 
 ## Conclusion
 
-In this blog, I've explored two powerful methods for enhancing long-term memory: **knowledge association** and **immersive experience**. By connecting new information with what we already know and engaging all our senses, we can significantly improve retention. With advancing technology, **personalised learning experiences tailored to individual knowledge and immersive scenarios** may revolutionise education in the future! For now, we still have a long way to go and there is definitely a bright future waiting for us in the education industry!
+In this blog, I've explored two powerful methods for enhancing long-term memory: **knowledge association** and **immersive experience**. By connecting new information with what we already know and engaging all our senses, we can significantly improve retention. With advancing technology, **personalised learning Experiences tailored to individual knowledge and immersive scenarios** may revolutionise education in the future! For now, we still have a long way to go and there is definitely a bright future waiting for us in the education industry!
