--- a/content/posts/2023-11-05-what-makes-a-good-edtech-game.mdx
+++ b/content/posts/2023-11-05-what-makes-a-good-edtech-game.mdx
@@ -24,7 +24,7 @@ So how can we make an **#edtech** game fun to play? When we talk about **educati
 
 ![c3](https://github.com/xmliszt/resources/blob/main/blogs/2023-11-05/3.jpg?raw=true)
 
-Some games also add certain **role play** to let learners feel a **sense of ownership**. For example, you have a character assigned to you to nurture and grow. The amount of experiences and points you collect through completing tasks in the game and learning new things, allow the in-game character to grow and evolve. Some games also introduce decorative elements that allow players to decorate their own "virtual house" for the character.
+Some games also add certain **role play** to let learners feel a **sense of ownership**. For example, you have a character assigned to you to nurture and grow. The amount of Experiences and points you collect through completing tasks in the game and learning new things, allow the in-game character to grow and evolve. Some games also introduce decorative elements that allow players to decorate their own "virtual house" for the character.
 
 ### Simple Yet Addictive
 
@@ -62,4 +62,4 @@ If we put this into a game, we can have some **review sessions or real-life simu
 
 ## Conclusion
 
-In conclusion, an effective **#edtech** game seamlessly blends the elements of **fun and learning**, providing an engaging platform for acquiring knowledge. By incorporating **competitive elements**, **role-playing**, **simplicity**, and **addictiveness**, we create an environment where learners eagerly pursue knowledge while having fun. Additionally, the learning process should be approached with thoughtful consideration of **progression**, **complexity**, and the importance of a **supportive community**. When these elements merge together, we unlock the potential for a modern education system that captivates learners while delivering valuable educational experiences. The future of education lies in the fusion of enjoyment and learning, shaping a generation of eager and empowered learners.
+In conclusion, an effective **#edtech** game seamlessly blends the elements of **fun and learning**, providing an engaging platform for acquiring knowledge. By incorporating **competitive elements**, **role-playing**, **simplicity**, and **addictiveness**, we create an environment where learners eagerly pursue knowledge while having fun. Additionally, the learning process should be approached with thoughtful consideration of **progression**, **complexity**, and the importance of a **supportive community**. When these elements merge together, we unlock the potential for a modern education system that captivates learners while delivering valuable educational Experiences. The future of education lies in the fusion of enjoyment and learning, shaping a generation of eager and empowered learners.
